# backend/app/api/handlers/v1/v1_ctrl_items.go
@@ -26,13 +26,19 @@ import (
 //	@Summary	Query All Items
 //	@Tags		Items
 //	@Produce	json
-//	@Param		q			query		string		false	"search string"
-//	@Param		page		query		int			false	"page number"
-//	@Param		pageSize	query		int			false	"items per page"
-//	@Param		tags		query		[]string	false	"tags Ids"		collectionFormat(multi)
-//	@Param		locations	query		[]string	false	"location Ids"	collectionFormat(multi)
-//	@Param		parentIds	query		[]string	false	"parent Ids"	collectionFormat(multi)
-//	@Success	200			{object}	repo.PaginationResult[repo.ItemSummary]{}
+//	@Param		q					query	string		false	"Search string"
+//	@Param		page				query	int			false	"Page number"
+//	@Param		pageSize			query	int			false	"Items per page"
+//	@Param		tags				query	[]string	false	"Tags Ids"												collectionFormat(multi)
+//	@Param		negateTags			query	[]string	false	"Exclude tags specified in the query parameter"			collectionFormat(multi)
+//	@Param		locations			query	[]string	false	"Location Ids"											collectionFormat(multi)
+//	@Param		parentIds			query	[]string	false	"Parent Ids"											collectionFormat(multi)
+//	@Param		onlyWithPhoto		query	bool		false	"Only return items that have a photo"
+//	@Param		onlyWithoutPhoto	query	bool		false	"Only return items that don't have a photo"
+//	@Param		includeArchived		query	bool		false	"Includes items in the results that have been archived"
+//	@Param		orderBy				query	string		false	"Field to be order by"
+//	@Param		orderByDirection	query	string		false	"Direction to ordered the results by"
+//	@Success	200					{object}	repo.PaginationResult[repo.ItemSummary]{}
 //	@Router		/v1/items [GET]
 //	@Security	Bearer
 func (ctrl *V1Controller) HandleItemsGetAll() errchain.HandlerFunc {
